# Connectathon-ObsGenTx

./: .gitignore  IHE-Obs&Pat-Gen-Tx.py  README.md  ihe_obs_pat_gen.py  ihe_obs_pat_gen_tx.py  main.py  pyproject.toml
GEN_OBS/: Device_ecg-monitor.json  Patient_IHE-J-CTN-001.json  Patient_IHE-J-CTN-002.json  Patient_IHE-J-CTN-003.json  Patient_IHE-J-CTN-004.json  Practitioner_jp-practitioner-example-female-1.json  Specimen_jp-specimen-example-1.json
GEN_OBS/Obs_2026-06-28/: obs_BPR_01_P1fiD1.json  obs_BPR_02_P1fiD2.json  obs_BPR_03_P1fiD3.json  obs_BPR_04_P1prD1.json  obs_BPR_05_P1prD2.json  obs_BPR_06_P1prD3.json  obs_BPR_07_P1caD1.json  obs_BPR_08_P1caD2.json  obs_BPR_09_P1caD3.json  obs_BPR_10_P2fiD1.json  obs_BPR_11_P2fiD2.json  obs_BPR_12_P2fiD3.json  obs_BPR_13_P2prD1.json  obs_BPR_14_P2prD2.json  obs_BPR_15_P2prD3.json  obs_BPR_16_P2caD1.json  obs_BPR_17_P2caD2.json  obs_BPR_18_P2caD3.json  obs_BPR_19_P3fiD1.json  obs_BPR_20_P3fiD2.json  obs_BPR_21_P3fiD3.json  obs_BPR_22_P3prD1.json  obs_BPR_23_P3prD2.json  obs_BPR_24_P3prD3.json  obs_BPR_25_P3caD1.json  obs_BPR_26_P3caD2.json  obs_BPR_27_P3caD3.json  obs_BPR_28_P4fiD1.json  obs_BPR_29_P4fiD2.json  obs_BPR_30_P4fiD3.json  obs_BPR_31_P4prD1.json  obs_BPR_32_P4prD2.json  obs_BPR_33_P4prD3.json  obs_BPR_34_P4caD1.json  obs_BPR_35_P4caD2.json  (+217 more)
log/: LOG_OBS-TX.TXT  LOG_OBS-TX.TXT.1  LOG_OBS-TX.TXT.10  LOG_OBS-TX.TXT.2  LOG_OBS-TX.TXT.3  LOG_OBS-TX.TXT.6  LOG_OBS-TX.TXT.8
mylib/: generate_obs.py  generate_pat.py  get_item.py  hostname_os.py  http_code.py  logger.py  myWin.py  readWriteXL.py  version_info2.py
