[project]
name = "connectathon-obsgentx"
version = "0.1.0"
description = "generate Obs and transfer them to FHIR-server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
obsgentx = "ihe_obs_pat_gen_tx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]